--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "tft-library",
   "version": "1.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nayfin/tft-library.git"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -39,9 +43,11 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@ngtools/webpack": "^1.7.4",
+    "@types/lodash-es": "^4.17.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^8.0.50",
+    "@types/nouislider": "^9.0.3",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
