--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json"
+    "packagr": "ng-packagr -p ng-package.json",
+    "publish":"npm version patch && npm run packagr && npm publish dist"
   },
   "private": false,
   "dependencies": {
