--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "update": "npm version patch && npm run packagr && npm publish dist"
   },
   "private": false,
-  "dependencies": {
+  "peerDependencies": {
     "@angular/animations": "^5.1.1",
     "@angular/cdk": "^5.0.1",
     "@angular/common": "^5.1.1",
