--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p ng-package.json",
-    "update": "npm version patch && npm run packagr && npm publish dist"
+    "package-n-publish": "npm version patch && npm run packagr && npm publish dist"
   },
   "private": false,
   "peerDependencies": {
