--- a/package.json
+++ b/package.json
@@ -22,16 +22,38 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/animations": "^5.1.1",
-    "@angular/cdk": "^5.0.1",
-    "@angular/common": "^5.1.1",
-    "@angular/compiler": "^5.1.1",
-    "@angular/core": "^5.1.1",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.1.1",
-    "@angular/http": "^5.1.1",
-    "@angular/material": "^5.0.1",
-    "@angular/router": "^5.1.1",
+    "@angular/forms": "^5.2.1",
+    "@angular/http": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/router": "^5.2.1",
+    "algoliasearch": "^3.24.8",
+    "algoliasearch-helper": "^2.23.2",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "instantsearch.js": "^2.3.1",
+    "lodash-es": "^4.17.4",
+    "nouislider": "^10.0.0",
+    "querystring-es3": "^0.2.1",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
+  },
+  "dependencies": {
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.1",
+    "@angular/compiler": "^5.2.1",
+    "@angular/core": "^5.2.1",
+    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/forms": "^5.2.1",
+    "@angular/http": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/router": "^5.2.1",
     "algoliasearch": "^3.24.8",
     "algoliasearch-helper": "^2.23.2",
     "core-js": "^2.4.1",
@@ -44,30 +66,30 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.0",
-    "@angular/compiler-cli": "^5.1.1",
-    "@angular/language-service": "^5.1.1",
-    "@angular/platform-browser": "^5.1.1",
-    "@angular/platform-browser-dynamic": "^5.1.1",
+    "@angular/cli": "1.6.5",
+    "@angular/compiler-cli": "^5.2.1",
+    "@angular/language-service": "^5.2.1",
+    "@angular/platform-browser": "^5.2.1",
+    "@angular/platform-browser-dynamic": "^5.2.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash-es": "^4.17.0",
-    "@types/node": "^8.5.1",
-    "@types/nouislider": "^9.0.3",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^8.5.9",
+    "@types/nouislider": "^9.0.4",
+    "codelyzer": "^4.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^1.6.0",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.6.0"
   },
   "keywords": [
     "algolia",
