--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p ng-package.json"
+    "packagr": "ng-packagr -p ng-package.json",
+    "release": "scripts\\release.sh"
   },
   "private": false,
   "peerDependencies": {
