--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/animations": "^5.2.1",
-    "@angular/cdk": "^5.1.0",
-    "@angular/common": "^5.2.1",
-    "@angular/compiler": "^5.2.1",
-    "@angular/core": "^5.2.1",
+    "@angular/animations": "^5.2.4",
+    "@angular/cdk": "^5.2.0",
+    "@angular/common": "^5.2.4",
+    "@angular/compiler": "^5.2.4",
+    "@angular/core": "^5.2.4",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.2.1",
-    "@angular/http": "^5.2.1",
-    "@angular/material": "^5.1.0",
-    "@angular/router": "^5.2.1",
-    "algoliasearch": "^3.24.8",
-    "algoliasearch-helper": "^2.23.2",
+    "@angular/forms": "^5.2.4",
+    "@angular/http": "^5.2.4",
+    "@angular/material": "^5.2.0",
+    "@angular/router": "^5.2.4",
+    "algoliasearch": "^3.24.11",
+    "algoliasearch-helper": "^2.24.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "instantsearch.js": "^2.3.1",
@@ -73,8 +73,8 @@
     "lodash-es": "^4.17.5",
     "nouislider": "^10.0.0",
     "querystring-es3": "^0.2.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "webpack": "^3.11.0",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.8",
