--- a/package.json
+++ b/package.json
@@ -89,7 +89,8 @@
     "protractor": "~5.1.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.0"
+    "typescript": "~2.6.0",
+    "webpack": "~3.10.0"
   },
   "keywords": [
     "algolia",
