--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@angular/router": "^5.2.4",
     "algoliasearch": "^3.24.11",
     "algoliasearch-helper": "^2.24.0",
+    "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
+    "firebase": "^4.10.0",
     "hammerjs": "^2.0.8",
     "instantsearch.js": "^2.5.0",
     "lodash-es": "^4.17.5",
