--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "private": false,
   "peerDependencies": {
-    "@angular/animations": "^5.2.4",
+    "@angular/animations": "5.2.7",
     "@angular/cdk": "^5.2.0",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/core": "^5.2.4",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
+    "@angular/forms": "5.2.7",
+    "@angular/http": "5.2.7",
     "@angular/material": "^5.2.0",
-    "@angular/router": "^5.2.4",
+    "@angular/router": "5.2.7",
     "algoliasearch": "^3.24.11",
     "algoliasearch-helper": "^2.24.0",
     "core-js": "^2.4.1",
@@ -41,20 +41,20 @@
     "lodash-es": "^4.17.4",
     "nouislider": "^10.0.0",
     "querystring-es3": "^0.2.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/cdk": "^5.2.0",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/core": "^5.2.4",
+    "@angular/animations": "5.2.7",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "5.2.7",
+    "@angular/compiler": "5.2.7",
+    "@angular/core": "5.2.7",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.2.4",
-    "@angular/http": "^5.2.4",
-    "@angular/material": "^5.2.0",
-    "@angular/router": "^5.2.4",
+    "@angular/forms": "5.2.7",
+    "@angular/http": "5.2.7",
+    "@angular/material": "^5.2.4",
+    "@angular/router": "5.2.7",
     "algoliasearch": "^3.24.11",
     "algoliasearch-helper": "^2.24.0",
     "angularfire2": "^5.0.0-rc.6",
@@ -68,11 +68,11 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.8",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/language-service": "^5.2.4",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/cli": "1.7.2",
+    "@angular/compiler-cli": "5.2.7",
+    "@angular/language-service": "5.2.7",
+    "@angular/platform-browser": "5.2.7",
+    "@angular/platform-browser-dynamic": "5.2.7",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/lodash-es": "^4.17.0",
@@ -91,7 +91,7 @@
     "protractor": "~5.1.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.9.1",
-    "typescript": "~2.6.0",
+    "typescript": "2.6.2",
     "webpack": "~3.10.0"
   },
   "keywords": [
