fixes unmet dependencies

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/core": "5.2.10",
-    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/flex-layout": "5.0.0-beta.14",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
     "@angular/material": "^5.2.0",
@@ -50,7 +50,7 @@
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/core": "5.2.10",
-    "@angular/flex-layout": "^5.0.0-beta.14",
+    "@angular/flex-layout": "5.0.0-beta.14",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
     "@angular/material": "^5.2.4",
@@ -65,6 +65,7 @@
     "lodash-es": "^4.17.5",
     "nouislider": "^10.0.0",
     "querystring-es3": "^0.2.1",
+    "rxjs": "^5.5.10",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
