--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "release": "bash ./scripts/release.sh"
   },
   "private": false,
-  "peerDependencies": {
+  "dependencies": {
     "@angular/animations": "6.0.2",
     "@angular/cdk": "^6.0.0",
     "@angular/common": "6.0.2",
@@ -35,11 +35,11 @@
     "@angular/router": "6.0.2",
     "algoliasearch": "^3.24.11",
     "algoliasearch-helper": "^2.24.0",
-    "angularfire2": "^5.0.0-rc.6",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.4.1",
     "firebase": "^5.0.4",
     "hammerjs": "^2.0.8",
-    "instantsearch.js": "^2.5.0",
+    "instantsearch.js": "^2.7.4 ",
     "lodash-es": "^4.17.5",
     "nouislider": "^10.0.0",
     "querystring-es3": "^0.2.1",
