changes dependencies to peerDependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "release": "bash ./scripts/release.sh"
   },
   "private": false,
-  "dependencies": {
+  "peerDependencies": {
     "@angular/animations": "6.0.2",
     "@angular/cdk": "^6.0.0",
     "@angular/common": "6.0.2",
